src/objects/Apttus_Config2__CostType__c.object
<CustomObject>
    <description>Represents cost hierarchy definition</description>
    <fields>
        <fullName>Apttus_Config2__AllowManualAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to allow manual adjustment in cost line item object</description>
        <label>Allow Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CostModelId__c</fullName>
        <description>Reference to master cost model</description>
        <label>Cost Model</label>
        <referenceTo>Apttus_Config2__CostModel__c</referenceTo>
        <relationshipLabel>Cost Types</relationshipLabel>
        <relationshipName>CostTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideAllChildCosts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether child cost types should be hidden in the price waterfall</description>
        <inlineHelpText>Indicates whether child cost types should be hidden in the price waterfall</inlineHelpText>
        <label>Hide Child Cost Types in Price Waterfall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsProductSpecific__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the cost type has relevant cost list item(price list item)</description>
        <label>Is Product Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Label__c</fullName>
        <description>Cost Type Label</description>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Cost</fullName>
                </value>
                <value>
                    <fullName>Production Cost</fullName>
                </value>
                <value>
                    <fullName>Material, Equipment and Labor</fullName>
                </value>
                <value>
                    <fullName>Material and Equipment</fullName>
                </value>
                <value>
                    <fullName>Electrical Material</fullName>
                </value>
                <value>
                    <fullName>Mechanical Material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentCostTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to parent cost type</description>
        <label>Parent Cost Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__CostType__c.Apttus_Config2__CostModelId__c</field>
                <operation>equals</operation>
                <valueField>$Source.Apttus_Config2__CostModelId__c</valueField>
            </filterItems>
            <infoMessage>Please choose the parent cost type</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__CostType__c</referenceTo>
        <relationshipLabel>Child Cost Types</relationshipLabel>
        <relationshipName>CostTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Sequence of Cost Type</description>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cost Type</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>